minor correction to div spacing and button aligment on sidebar

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -4,6 +4,7 @@
     position: relative;
     display: inline-block;
     height: 44px;
+    margin-left: 20px;
     padding: 10px 20px;
     font-family: $te-font-bold;
     font-size: rem-calc(16);
